"Prepared Store profile for CRUD"

--- a/CFMMCD/CFMMCD.csproj
+++ b/CFMMCD/CFMMCD.csproj
@@ -191,9 +191,11 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MenuItemMasterController.cs" />
     <Compile Include="Controllers\StoreProfileController.cs" />
+    <Compile Include="Controllers\TextGeneratorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModel\TextGeneratorViewModel.cs" />
     <Compile Include="Sessions\SessionData.cs" />
     <Compile Include="Models\DB\Account.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
@@ -251,6 +253,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\MenuItemMaster\MenuItemMaster.cshtml" />
     <Content Include="Views\StoreProfile\StoreProfile.cshtml" />
+    <Content Include="Views\TextGenerator\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
