--- a/CFMMCD/CFMMCD.csproj
+++ b/CFMMCD/CFMMCD.csproj
@@ -197,16 +197,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\DB\INVRIMP0.cs">
-      <DependentUpon>CFMModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EntityManager\AuditLogManager.cs" />
-    <Compile Include="Models\EntityManager\RawItemMasterManager.cs" />
-    <Compile Include="Models\EntityManager\TextGeneratorManager.cs" />
-    <Compile Include="Models\ViewModel\AuditLogViewModel.cs" />
-    <Compile Include="Models\ViewModel\RawItemMasterViewModel.cs" />
-    <Compile Include="Models\ViewModel\TextGeneratorViewModel.cs" />
-    <Compile Include="Sessions\SessionData.cs" />
     <Compile Include="Models\DB\Account.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
@@ -234,9 +224,22 @@
     <Compile Include="Models\DB\CSHMIMP0_NP6.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DB\INVRIMP0.cs">
+      <DependentUpon>CFMModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DB\Price_Tier.cs">
+      <DependentUpon>CFMModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\DB\Store_Profile.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EntityManager\AuditLogManager.cs" />
+    <Compile Include="Models\EntityManager\RawItemMasterManager.cs" />
+    <Compile Include="Models\EntityManager\TextGeneratorManager.cs" />
+    <Compile Include="Models\ViewModel\AuditLogViewModel.cs" />
+    <Compile Include="Models\ViewModel\RawItemMasterViewModel.cs" />
+    <Compile Include="Models\ViewModel\TextGeneratorViewModel.cs" />
+    <Compile Include="Sessions\SessionData.cs" />
     <Compile Include="Models\EntityManager\AccountManager.cs" />
     <Compile Include="Models\EntityManager\MenuItemMasterManager.cs" />
     <Compile Include="Models\EntityManager\StoreProfileManager.cs" />
