--- a/CFMMCD/CFMMCD.csproj
+++ b/CFMMCD/CFMMCD.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\RawItemPriceUpdateController.cs" />
     <Compile Include="Controllers\RegularPriceTierController.cs" />
     <Compile Include="Controllers\ReportGenerationController .cs" />
+    <Compile Include="Controllers\SCMRecipeController.cs" />
     <Compile Include="Controllers\StoreProfileController.cs" />
     <Compile Include="Controllers\TextGeneratorController.cs" />
     <Compile Include="Controllers\ValueMealController.cs" />
@@ -265,9 +266,6 @@
     <Compile Include="Models\DB\CSHVMLP0.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\DB\CSM_Master_Recipe.cs">
-      <DependentUpon>CFMModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\DB\Dessert_Price_Tier.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
@@ -310,6 +308,9 @@
     <Compile Include="Models\DB\RIM_VEM_Lookup.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DB\SCM_Master_Recipe.cs">
+      <DependentUpon>CFMModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\DB\STORE_MIMMIC_Lookup.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
@@ -335,6 +336,7 @@
     <Compile Include="Models\EntityManager\RawItemMasterManager.cs" />
     <Compile Include="Models\EntityManager\RawItemPriceManager.cs" />
     <Compile Include="Models\EntityManager\RegularPriceTierManager.cs" />
+    <Compile Include="Models\EntityManager\SCMRecipeManager.cs" />
     <Compile Include="Models\EntityManager\TextGeneratorManager.cs" />
     <Compile Include="Models\EntityManager\ValueMealManager.cs" />
     <Compile Include="Models\EntityManager\VendorMasterManager.cs" />
@@ -354,6 +356,8 @@
     <Compile Include="Models\ViewModel\RawItemMasterViewModel.cs" />
     <Compile Include="Models\ViewModel\RawItemPriceUpdateViewModel.cs" />
     <Compile Include="Models\ViewModel\RegularPriceTierViewModel.cs" />
+    <Compile Include="Models\ViewModel\ReportGenerationViewModel.cs" />
+    <Compile Include="Models\ViewModel\SCMRecipeViewModel.cs" />
     <Compile Include="Models\ViewModel\TextGeneratorViewModel.cs" />
     <Compile Include="Models\ViewModel\ValueMealViewModel.cs" />
     <Compile Include="Models\ViewModel\VendorMasterViewModel.cs" />
@@ -406,6 +410,7 @@
     <Content Include="Views\ProfitCenter\Index.cshtml" />
     <Content Include="Views\ReportGeneration\Index.cshtml" />
     <Content Include="Views\ValueMeal\Index.cshtml" />
+    <Content Include="Views\SCMRecipe\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
