--- a/CFMMCD/packages.config
+++ b/CFMMCD/packages.config
@@ -17,4 +17,5 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
+  <package id="Rotativa" version="1.6.4" targetFramework="net461" />
 </packages>
