--- a/CFMMCD/CFMMCD.csproj
+++ b/CFMMCD/CFMMCD.csproj
@@ -85,6 +85,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.6.4\lib\net40\Rotativa.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -144,16 +148,6 @@
     <Content Include="fonts\roboto\Roboto-Regular.svg" />
     <Content Include="fonts\roboto\Roboto-Thin.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Models\DB\CFMModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CFMModel.edmx</DependentUpon>
-      <LastGenOutput>CFMModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\DB\CFMModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CFMModel.edmx</DependentUpon>
-      <LastGenOutput>CFMModel.cs</LastGenOutput>
-    </Content>
     <Content Include="fonts\roboto\Roboto-Regular.eot" />
     <Content Include="fonts\roboto\Roboto-Regular.ttf" />
     <Content Include="fonts\roboto\Roboto-Regular.woff" />
@@ -170,13 +164,6 @@
     <Content Include="fonts\calibri\Calibri-LightItalic.ttf" />
     <Content Include="fonts\calibri\Calibri-LightItalic.woff" />
     <Content Include="fonts\calibri\Calibri-LightItalic.woff2" />
-    <EntityDeploy Include="Models\DB\CFMModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>CFMModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\DB\CFMModel.edmx.diagram">
-      <DependentUpon>CFMModel.edmx</DependentUpon>
-    </Content>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -185,7 +172,25 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <EntityDeploy Include="Models\DB\CFMModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>CFMModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\DB\CFMModel.edmx.diagram">
+      <DependentUpon>CFMModel.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="Models\DB\CFMModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CFMModel.edmx</DependentUpon>
+      <LastGenOutput>CFMModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\DB\CFMModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>CFMModel.edmx</DependentUpon>
+      <LastGenOutput>CFMModel.cs</LastGenOutput>
+    </Content>
+    <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
@@ -220,7 +225,7 @@
     <Compile Include="Controllers\RawItemMasterController.cs" />
     <Compile Include="Controllers\RawItemPriceUpdateController.cs" />
     <Compile Include="Controllers\RegularPriceTierController.cs" />
-    <Compile Include="Controllers\ReportGenerationController .cs" />
+    <Compile Include="Controllers\ReportGenerationController.cs" />
     <Compile Include="Controllers\SCMRecipeController.cs" />
     <Compile Include="Controllers\StoreProfileController.cs" />
     <Compile Include="Controllers\TextGeneratorController.cs" />
@@ -264,6 +269,9 @@
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DB\CSHVMLP0.cs">
+      <DependentUpon>CFMModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DB\CSM_Master_Recipe.cs">
       <DependentUpon>CFMModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DB\Dessert_Price_Tier.cs">
