--- a/CFMMCD/CFMMCD.csproj
+++ b/CFMMCD/CFMMCD.csproj
@@ -207,6 +207,7 @@
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\philippines\index.js" />
+    <Content Include="Scripts\Search.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
