--- a/CFMMCD/packages.config
+++ b/CFMMCD/packages.config
@@ -4,6 +4,7 @@
   <package id="ClosedXML" version="0.85.0" targetFramework="net461" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.10" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net461" />
