Fixed merge condlict

--- a/CFMMCD/CFMMCD.csproj
+++ b/CFMMCD/CFMMCD.csproj
@@ -380,6 +380,7 @@
     <Compile Include="Models\EntityManager\ReportGenerationManager.cs" />
     <Compile Include="Models\EntityManager\SCMRecipeManager.cs" />
     <Compile Include="Models\EntityManager\TextGeneratorManager.cs" />
+    <Compile Include="Models\EntityManager\TierManager.cs" />
     <Compile Include="Models\EntityManager\ValueMealManager.cs" />
     <Compile Include="Models\EntityManager\VendorMasterManager.cs" />
     <Compile Include="Models\ViewModel\AuditLogViewModel.cs" />
